added 1 more filtering option and code comments

--- a/week1/health-pricing/src/ChartByProcedure/ChartByProcedure.css
+++ b/week1/health-pricing/src/ChartByProcedure/ChartByProcedure.css
@@ -1,4 +1,12 @@
 
+.back_ground_bar:hover {
+    opacity: 0.5!important;
+
+    fill: lightgrey !important;
+}
+
+
+
 #header {
     display:inline;
     text-align: left;
