--- a/week1/health-pricing/src/ListOfVariables/ListOfVariables.css
+++ b/week1/health-pricing/src/ListOfVariables/ListOfVariables.css
@@ -14,3 +14,22 @@
 }
 
 
+/*#toggle_btn:hover {*/
+
+    /*background-color: grey !important;*/
+
+/*}*/
+
+
+/*#toggle_btn.active {*/
+
+    /*background-color: green !important;*/
+
+/*}*/
+
+/*.btn-group { display: inline-block; }*/
+
+
+/*#theDiv{*/
+    /*display: inline;*/
+/*}*/
