--- a/week1/health-pricing/src/TableComponent/TableComponent.css
+++ b/week1/health-pricing/src/TableComponent/TableComponent.css
@@ -1,13 +1,13 @@
 .container {
     /*height: 600px;*/
-    width: 1150px;
+    /*width: 1150px;*/
     overflow: auto;
-    border: 2px;
+    /*border: 2px;*/
 }
 
 
 #table {
-    width : 1150px;
+    width : 100%;
     font-size: 10px;
 
 
