--- a/week1/health-pricing/src/ChartByProcedure/ChartByProcedure.css
+++ b/week1/health-pricing/src/ChartByProcedure/ChartByProcedure.css
@@ -164,3 +164,14 @@
     /*position: absolute;*/
     /*text-align: center;*/
 /*}*/
+
+
+.d3-tip-for-bar {
+    transform: translate(0px, 200px);
+    /*line-height: 1;*/
+    padding: 6px;
+    background: rgba(0, 0, 0, 0.8);
+    color: #fff;
+    border-radius: 4px;
+    font-size: 12px;
+}
